- Added cRefactor.sh generation to build.sbt - Changed "reparsing" mechanism